Changelog
=========

1.0.3 (unreleased)
------------------

* Output contents of error log as part of debugging output
  [lentinj]

* Debugging output.
  [lentinj]

* Don't close the response unless Diazo is transforming it.
  [mitchellrj]

* fix error caused by empty style tag e.g. <style/>
  [djay]

1.0.2 (2012-08-30)
------------------

* Handle error when serializing empty responses by returning an unthemed
  response. Previously, empty text/html responses resulted in an raised
  exception, resulting in a 500 response and no output.
  [davidjb]

* Allow attributes (i.e. xml:id) to pass through on drop @attribute nodes
  [lentinj]

1.0.1 (2012-05-09)
------------------

* Fixed to not apply absolute prefix for relative urls starting with '#'.
  [datakurre]

1.0 (2012-04-15)
----------------

* Preserve resolvers in the rules document when updating from an old namespace.

* Add javascript / css include support to WSGIResolver.

* Refactoring if WSGI middleware to use WebOb better and fix corner cases.

* Use same xpath prefix for css:if-not-content and css:if-content.

* Add support for @if-not-path.

1.0rc4 - 2011-11-02
-------------------

* Add support for @if-not and @if-not-content.

* Add support for specifying mode on inclusion rules.

* Preserve comments preceding/following html tag in theme. Closes #12249.

* Fix quote_param to always use lxml.etree.XSLT.strparam.

* Handle rules file without a theme to allow drop or replace content.

1.0rc3 - 2011-07-04
-------------------

* Support for ``filter_xpath`` requests for ESI/SSI includes.

* Do not try to transform HEAD requests, otherwise you get:
  ``XMLSyntaxError: no element found``.
  [maurits]

1.0rc2 - 2011-06-08
-------------------

* Fix detection of Content-Type.

* Add doctype option to wsgi middleware to support HTML5 output.

* Fix line endings for included external content.

1.0rc1 - 2011-05-24
-------------------

* Fix diazocompiler --output option.

1.0b4 - 2011-05-17
------------------
