@@ -460,9 +460,14 @@
                      <xsl:text>&quot;</xsl:text>
                  </xsl:for-each>
                  <xsl:text>&gt;</xsl:text>
-                 <xsl:if test="string($attr)">
-                     <xsl:element name="xsl:value-of"><xsl:attribute name="select">count(<xsl:value-of select="$attr"/>)</xsl:attribute></xsl:element>
-                 </xsl:if>
+                 <xsl:choose>
+                     <xsl:when test="string($attr) and contains('content,content-children', name($attr))">
+                         <xsl:element name="xsl:value-of"><xsl:attribute name="select">count(<xsl:value-of select="$attr"/>)</xsl:attribute></xsl:element>
+                     </xsl:when>
+                     <xsl:when test="string($attr) and contains('if-content', name($attr))">
+                         <xsl:element name="xsl:value-of"><xsl:attribute name="select">boolean(<xsl:value-of select="$attr"/>)</xsl:attribute></xsl:element>
+                     </xsl:when>
+                 </xsl:choose>
                  <xsl:text>&lt;/runtrace&gt;</xsl:text>
                </xsl:element>
                <xsl:text>&#10;</xsl:text>
